kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system-ingress
  namespace: _{_NAMESPACE_}_
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gke-poc-nginx-production.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system
            port:
              number: 3000
  # Uncomment to enable HTTPS
  # tls:
  # - hosts:
  #   - gke-poc-nginx-development.local
  #   secretName: solar-system-tls-secret
